--- a/data_engineering/data_export.ipynb
+++ b/data_engineering/data_export.ipynb
@@ -32,6 +32,7 @@
     "from sqlalchemy import create_engine\n",
     "import json\n",
     "import requests\n",
+    "import os\n",
     "\n",
     "from sqlalchemy import create_engine, update, Table, MetaData\n",
     "from sqlalchemy.orm import sessionmaker\n",
@@ -42,7 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "99df18f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "os.environ[\"TORCH_DISTRIBUTED_DEBUG\"] = \"DETAIL\"\n",
+    "os.environ[\"NCCL_P2P_DISABLE\"] = \"1\"\n",
+    "os.environ[\"NCCL_SHM_DISABLE\"] = \"1\"\n",
+    "os.environ[\"NCCL_DEBUG\"] = \"INFO\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2c20798b",
    "metadata": {},
    "outputs": [
@@ -470,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = dataset.map(tokenize, batched=False)"
+    "dataset = dataset.map(tokenize, batched=True)"
    ]
   },
   {
@@ -557,22 +572,57 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=args,\n",
     "    train_dataset=dataset,\n",
     "    eval_dataset=dataset,\n",
-    ")\n",
-    "\n",
-    "trainer.train()"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee85403",
+   "id": "a33e0e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6ff6505",
+   "metadata": {},
+   "source": [
+    "TrainOutput(global_step=16902, training_loss=0.2363526517294551, metrics={'train_runtime': 10872.7876, 'train_samples_per_second': 12.436, 'train_steps_per_second': 1.555, 'total_flos': 3.557603512839168e+16, 'train_loss': 0.2363526517294551, 'epoch': 3.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f53a4d1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(\"trained_model_bert_20250508\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c4dea79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.save_pretrained(\"tokenizer_model_bert_20250508\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26af8643",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -594,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
