--- a/data_engineering/data_export.ipynb
+++ b/data_engineering/data_export.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fc96cc26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/allan/Workspace/fiap-datathon-decision/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark import SparkConf\n",
     "from pyspark.sql import SparkSession\n",
@@ -23,6 +32,7 @@
     "from sqlalchemy import create_engine\n",
     "import json\n",
     "import requests\n",
+    "import os\n",
     "\n",
     "from sqlalchemy import create_engine, update, Table, MetaData\n",
     "from sqlalchemy.orm import sessionmaker\n",
@@ -34,9 +44,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c20798b",
+   "id": "99df18f3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "os.environ[\"TORCH_DISTRIBUTED_DEBUG\"] = \"DETAIL\"\n",
+    "os.environ[\"NCCL_P2P_DISABLE\"] = \"1\"\n",
+    "os.environ[\"NCCL_SHM_DISABLE\"] = \"1\"\n",
+    "os.environ[\"NCCL_DEBUG\"] = \"INFO\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c20798b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/home/allan/Workspace/fiap-datathon-decision/.venv/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/allan/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/allan/.ivy2/jars\n",
+      "com.mysql#mysql-connector-j added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-f8a54e0b-c508-4a6e-9471-1a334283e446;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound com.mysql#mysql-connector-j;9.2.0 in central\n",
+      "\tfound com.google.protobuf#protobuf-java;4.29.0 in central\n",
+      ":: resolution report :: resolve 203ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tcom.google.protobuf#protobuf-java;4.29.0 from central in [default]\n",
+      "\tcom.mysql#mysql-connector-j;9.2.0 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   2   |   0   |   0   |   0   ||   2   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-f8a54e0b-c508-4a6e-9471-1a334283e446\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 2 already retrieved (0kB/6ms)\n",
+      "25/05/09 21:36:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "spark_conf = SparkConf()\n",
     "spark_conf.set(\"spark.cores\", \"12\")\n",
@@ -71,12 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "801596cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"mysql+pymysql://decision:1234@localhost/decision?charset=utf8\")"
+    "engine = create_engine(\"mysql+pymysql://decision:1234@localhost/decision?charset=utf8\")\n",
+    "days_to_read = 1800"
    ]
   },
   {
@@ -92,11 +154,19 @@
    "execution_count": null,
    "id": "391e7aa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/05/09 21:41:09 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    }
+   ],
    "source": [
     "spark.read.jdbc(\n",
     "    url=\"jdbc:mysql://decision:1234@localhost:3306/decision?charset=utf8\",\n",
-    "    table=\"vacancies\",\n",
+    "    table=f\"(SELECT * FROM vacancies WHERE requested_date > DATE_ADD(current_date(), INTERVAL -{days_to_read} DAY)) AS t\",\n",
     "    properties={\"driver\": \"com.mysql.cj.jdbc.Driver\"}\n",
     ").createOrReplaceTempView(\"vacancies\")"
    ]
@@ -111,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "07ddfa9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark.read.jdbc(\n",
     "    url=\"jdbc:mysql://decision:1234@localhost:3306/decision?charset=utf8\",\n",
-    "    table=\"applicants\",\n",
+    "    table=f\"(SELECT * FROM applicants WHERE created_at > DATE_ADD(current_date(), INTERVAL -{days_to_read} DAY)) AS t\",\n",
     "    properties={\"driver\": \"com.mysql.cj.jdbc.Driver\"}\n",
     ").createOrReplaceTempView(\"applicants\")"
    ]
@@ -133,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "05a57897",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark.read.jdbc(\n",
     "    url=\"jdbc:mysql://decision:1234@localhost:3306/decision?charset=utf8\",\n",
-    "    table=\"vacancies_applicants\",\n",
+    "    table=f\"(SELECT * FROM vacancies_applicants WHERE application_date > DATE_ADD(current_date(), INTERVAL -{days_to_read} DAY)) AS t\",\n",
     "    properties={\"driver\": \"com.mysql.cj.jdbc.Driver\"}\n",
     ").createOrReplaceTempView(\"vacancies_applicants\")"
    ]
@@ -415,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = dataset.map(tokenize, batched=False)"
+    "dataset = dataset.map(tokenize, batched=True)"
    ]
   },
   {
@@ -436,7 +506,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\"neuralmind/bert-base-portuguese-cased\", num_labels=2)"
    ]
   },
@@ -463,24 +532,97 @@
    "execution_count": null,
    "id": "25567db9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/05/07 17:07:16 WARN TransportChannelHandler: Exception in connection from fedora/192.168.101.88:35385\n",
+      "java.io.IOException: Connection timed out\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read0(Native Method)\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read(SocketDispatcher.java:47)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.readIntoNativeBuffer(IOUtil.java:330)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:284)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:259)\n",
+      "\tat java.base/sun.nio.ch.SocketChannelImpl.read(SocketChannelImpl.java:417)\n",
+      "\tat io.netty.buffer.PooledByteBuf.setBytes(PooledByteBuf.java:254)\n",
+      "\tat io.netty.buffer.AbstractByteBuf.writeBytes(AbstractByteBuf.java:1132)\n",
+      "\tat io.netty.channel.socket.nio.NioSocketChannel.doReadBytes(NioSocketChannel.java:357)\n",
+      "\tat io.netty.channel.nio.AbstractNioByteChannel$NioByteUnsafe.read(AbstractNioByteChannel.java:151)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKey(NioEventLoop.java:788)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeysOptimized(NioEventLoop.java:724)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeys(NioEventLoop.java:650)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.run(NioEventLoop.java:562)\n",
+      "\tat io.netty.util.concurrent.SingleThreadEventExecutor$4.run(SingleThreadEventExecutor.java:997)\n",
+      "\tat io.netty.util.internal.ThreadExecutorMap$2.run(ThreadExecutorMap.java:74)\n",
+      "\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=args,\n",
     "    train_dataset=dataset,\n",
     "    eval_dataset=dataset,\n",
-    ")\n",
-    "\n",
-    "trainer.train()"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee85403",
+   "id": "a33e0e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6ff6505",
+   "metadata": {},
+   "source": [
+    "TrainOutput(global_step=16902, training_loss=0.2363526517294551, metrics={'train_runtime': 10872.7876, 'train_samples_per_second': 12.436, 'train_steps_per_second': 1.555, 'total_flos': 3.557603512839168e+16, 'train_loss': 0.2363526517294551, 'epoch': 3.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f53a4d1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(\"trained_model_bert_20250508\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c4dea79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.save_pretrained(\"tokenizer_model_bert_20250508\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26af8643",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
